--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,169 +17,184 @@
       </div>
     </div>
 
-    <div class="row content">
-      <div>
-        <div
-          class="back-button"
-          (click)="goBack()"
-          [@showHide]="!isVisible ? 'show' : 'hide'"
-        >
-          <fa-icon icon="arrow-left" class="fa-sharp fa-solid"></fa-icon>
-        </div>
-
-        <div class="slide-wrapper">
-          <a
-            class="up arrow"
-            (click)="slideUp(1)"
-            [@showHide]="isVisible ? 'show' : 'hide'"
+    <div class="column content">
+      <div class="row">
+        <div>
+          <div
+            class="back-button"
+            (click)="goBack()"
+            [@showHide]="!isVisible ? 'show' : 'hide'"
           >
-            <fa-icon icon="angle-up" class="fa-sharp fa-solid"></fa-icon>
-          </a>
-
-          <div class="slideshow-container" #slideshowContainer>
-            <div
-              class="mySlides"
-              #slide
-              [@scaleUpDown]="!isVisible ? 'scaleUp' : 'scaleDown'"
-            >
-              <img
-                src="../assets/image/headphones-1.jpg"
-                alt="1"
-                width="400"
-                height="530"
-              />
-            </div>
-            <div
-              class="mySlides"
-              #slide
-              [@scaleUpDown]="!isVisible ? 'scaleUp' : 'scaleDown'"
-            >
-              <img
-                src="../assets/image/headphones-2.jpg"
-                alt="2"
-                width="400"
-                height="530"
-              />
-            </div>
-            <div
-              class="mySlides"
-              #slide
-              [@scaleUpDown]="!isVisible ? 'scaleUp' : 'scaleDown'"
-            >
-              <img
-                src="../assets/image/headphones-3.jpg"
-                alt="3"
-                width="400"
-                height="530"
-              />
-            </div>
+            <fa-icon icon="arrow-left" class="fa-sharp fa-solid"></fa-icon>
           </div>
 
-          <a
-            class="down arrow"
-            (click)="slideDown(1)"
-            [@showHide]="isVisible ? 'show' : 'hide'"
-          >
-            <fa-icon icon="angle-down" class="fa-sharp fa-solid"></fa-icon>
-          </a>
+          <div class="slide-wrapper">
+            <a
+              class="up arrow"
+              (click)="slideUp(1)"
+              [@showHide]="isVisible ? 'show' : 'hide'"
+            >
+              <fa-icon icon="angle-up" class="fa-sharp fa-solid"></fa-icon>
+            </a>
+
+            <div class="slideshow-container" #slideshowContainer>
+              <div
+                class="mySlides"
+                #slide
+                [@scaleUpDown]="!isVisible ? 'scaleUp' : 'scaleDown'"
+              >
+                <img
+                  src="../assets/image/headphones-1.jpg"
+                  alt="1"
+                  width="400"
+                  height="530"
+                />
+              </div>
+              <div
+                class="mySlides"
+                #slide
+                [@scaleUpDown]="!isVisible ? 'scaleUp' : 'scaleDown'"
+              >
+                <img
+                  src="../assets/image/headphones-2.jpg"
+                  alt="2"
+                  width="400"
+                  height="530"
+                />
+              </div>
+              <div
+                class="mySlides"
+                #slide
+                [@scaleUpDown]="!isVisible ? 'scaleUp' : 'scaleDown'"
+              >
+                <img
+                  src="../assets/image/headphones-3.jpg"
+                  alt="3"
+                  width="400"
+                  height="530"
+                />
+              </div>
+            </div>
+
+            <a
+              class="down arrow"
+              (click)="slideDown(1)"
+              [@showHide]="isVisible ? 'show' : 'hide'"
+            >
+              <fa-icon icon="angle-down" class="fa-sharp fa-solid"></fa-icon>
+            </a>
+          </div>
+        </div>
+
+        <!-- /////////////////// CONVERTION ZONE ////////////////////// -->
+        <div>
+          <div class="convertion-zone">
+            <!-- [ngStyle.lt-md]="{ 'margin-left.px': 25 }" -->
+            <div class="brand">SYMPHONIZED Wraith 2.0</div>
+            <div class="item">Premium Genuine Wood Over-Ear Headphones</div>
+            <div class="price-wrapper">
+              <div>FROM</div>
+              <div class="price">
+                <span> $64.99 </span>
+              </div>
+            </div>
+
+            <div class="color-picker">
+              <div
+                #pickerElement
+                class="circle chocolate color-picker-element"
+                [class]="{ active: selectedColor === 1 }"
+                (click)="currentSlide(1)"
+              ></div>
+
+              <span #pickerElement class="color-picker-element"></span>
+
+              <div
+                #pickerElement
+                class="circle burlywood color-picker-element"
+                [class]="{ active: selectedColor === 2 }"
+                (click)="currentSlide(2)"
+              ></div>
+
+              <span #pickerElement class="color-picker-element"></span>
+
+              <div
+                #pickerElement
+                class="circle sienna color-picker-element"
+                [class]="{ active: selectedColor === 3 }"
+                (click)="currentSlide(3)"
+              ></div>
+            </div>
+
+            <div class="size-select" [@showHide]="!isVisible ? 'show' : 'hide'">
+              <div class="select-text">Select Your Size</div>
+              <div class="sizes">
+                <div class="selected">
+                  <span>S</span>
+                </div>
+                <div>
+                  <span>M</span>
+                </div>
+                <div>
+                  <span>L</span>
+                </div>
+              </div>
+            </div>
+
+            <div
+              class="shop-now-button"
+              [@slideUpDown]="isVisible ? 'up' : 'down'"
+            >
+              <button (click)="shopNow()" *ngIf="isVisible">
+                <span>Shop Now</span>
+              </button>
+              <button *ngIf="!isVisible">
+                <span>Buy Now</span>
+              </button>
+            </div>
+
+            <div
+              class="thumbnail-content"
+              [@showHide]="!isVisible ? 'show' : 'hide'"
+            >
+              <div>
+                <ol>
+                  <li>
+                    <img
+                      src="../assets/image/headphone-usage-1.jpg"
+                      alt="headphone-usage-1"
+                    />
+                  </li>
+                  <li>
+                    <img
+                      src="../assets/image/headphone-usage-2.jpg"
+                      alt="headphone-usage-2"
+                    />
+                  </li>
+                  <li>
+                    <img
+                      src="../assets/image/headphone-usage-3.jpg"
+                      alt="headphone-usage-3"
+                    />
+                  </li>
+                </ol>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
-      <!-- /////////////////// CONVERTION ZONE ////////////////////// -->
-      <div>
-        <div class="convertion-zone">
-          <!-- [ngStyle.lt-md]="{ 'margin-left.px': 25 }" -->
-          <div class="brand">SYMPHONIZED Wraith 2.0</div>
-          <div class="item">Premium Genuine Wood Over-Ear Headphones</div>
-          <div class="price-wrapper">
-            <div>FROM</div>
-            <div class="price">
-              <span> $64.99 </span>
-            </div>
-          </div>
+      <!-- /////////////////// PRODUCT INFORMATION ////////////////////// -->
+      <div class="row product-information">
+        <div>What's in the box?</div>
 
-          <div class="color-picker">
-            <div
-              #pickerElement
-              class="circle chocolate color-picker-element"
-              [class]="{ active: selectedColor === 1 }"
-              (click)="currentSlide(1)"
-            ></div>
+        <!-- What is in the box?
+Ear Cushions
+Headband -->
 
-            <span #pickerElement class="color-picker-element"></span>
+        <div>Product Description</div>
 
-            <div
-              #pickerElement
-              class="circle burlywood color-picker-element"
-              [class]="{ active: selectedColor === 2 }"
-              (click)="currentSlide(2)"
-            ></div>
-
-            <span #pickerElement class="color-picker-element"></span>
-
-            <div
-              #pickerElement
-              class="circle sienna color-picker-element"
-              [class]="{ active: selectedColor === 3 }"
-              (click)="currentSlide(3)"
-            ></div>
-          </div>
-
-          <div class="size-select" [@showHide]="!isVisible ? 'show' : 'hide'">
-            <div class="select-text">Select Your Size</div>
-            <div class="sizes">
-              <div class="selected">
-                <span>S</span>
-              </div>
-              <div>
-                <span>M</span>
-              </div>
-              <div>
-                <span>L</span>
-              </div>
-            </div>
-          </div>
-
-          <div
-            class="shop-now-button"
-            [@slideUpDown]="isVisible ? 'up' : 'down'"
-          >
-            <button (click)="shopNow()" *ngIf="isVisible">
-              <span>Shop Now</span>
-            </button>
-            <button *ngIf="!isVisible">
-              <span>Buy Now</span>
-            </button>
-          </div>
-
-          <div
-            class="thumbnail-content"
-            [@showHide]="!isVisible ? 'show' : 'hide'"
-          >
-            <div>
-              <ol>
-                <li>
-                  <img
-                    src="../assets/image/headphone-usage-1.jpg"
-                    alt="headphone-usage-1"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="../assets/image/headphone-usage-2.jpg"
-                    alt="headphone-usage-2"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="../assets/image/headphone-usage-3.jpg"
-                    alt="headphone-usage-3"
-                  />
-                </li>
-              </ol>
-            </div>
-          </div>
-        </div>
+        <!-- With its unique acoustical properties, wood has always played a crucial role in music, giving life to instruments and concert halls that have inspired music-lovers for centuries. Today, Symphonized continues this legacy through handcrafted, all-natural wood headphones and speakers, with each style offering listeners a unique experience unmatched by many of the modern materials used today. In addition to great sound, all Symphonized products are assembled by hand and meticulously tested, ensuring every device is always strong, durable and ready to rock. -->
       </div>
     </div>
   </div>
