Added product information + readme update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="content-wrapper colored-background" #contentWrapper>
     <div class="top-bar row padding-0">
       <div class="row left-side to-the-left to-50">
-        <fa-icon icon="bars" class="fa-sharp fa-solid"></fa-icon>
+        <!-- <fa-icon icon="bars" class="fa-sharp fa-solid"></fa-icon> -->
       </div>
 
       <div class="row right-side to-the-right to-50">
@@ -186,15 +186,57 @@
 
       <!-- /////////////////// PRODUCT INFORMATION ////////////////////// -->
       <div class="row product-information">
-        <div>What's in the box?</div>
+        <div>
+          <h2>What's in the box?</h2>
 
-        <!-- What is in the box?
-Ear Cushions
-Headband -->
+          <ul>
+            <li>Ear Cushions</li>
+            <li>Headband</li>
+          </ul>
+        </div>
 
-        <div>Product Description</div>
-
-        <!-- With its unique acoustical properties, wood has always played a crucial role in music, giving life to instruments and concert halls that have inspired music-lovers for centuries. Today, Symphonized continues this legacy through handcrafted, all-natural wood headphones and speakers, with each style offering listeners a unique experience unmatched by many of the modern materials used today. In addition to great sound, all Symphonized products are assembled by hand and meticulously tested, ensuring every device is always strong, durable and ready to rock. -->
+        <div class="width-33">
+          <h2>Product Description</h2>
+          <p>
+            With its unique acoustical properties, wood has always played a
+            crucial role in music, giving life to instruments and concert halls
+            that have inspired music-lovers for centuries. Today, Symphonized
+            continues this legacy through handcrafted, all-natural wood
+            headphones and speakers, with each style offering listeners a unique
+            experience unmatched by many of the modern materials used today. In
+            addition to great sound, all Symphonized products are assembled by
+            hand and meticulously tested, ensuring every device is always
+            strong, durable and ready to rock.
+          </p>
+        </div>
+        <div class="width-33">
+          <h2>Technical Details</h2>
+          <ul>
+            <li>Headphones Jack ‎3.5 mm Jack</li>
+            <li>Connectivity Technology ‎Wired</li>
+            <li>Included Components ‎Ear Cushions, Headband</li>
+            <li>Age Range (Description) ‎Adult</li>
+            <li>Material ‎Wood</li>
+            <li>Control Type ‎Voice Control</li>
+            <li>Item Weight ‎408 g</li>
+            <li>Style ‎Over Ear</li>
+            <li>Number of Items ‎1</li>
+            <li>UPC ‎700600919503</li>
+            <li>Manufacturer ‎SYMPHONIZED</li>
+            <li>Model ‎FBA_wraith2.0cherry</li>
+            <li>Product Dimensions ‎25.65 x 8.38 x 19.56 cm; 408.23 g</li>
+            <li>Item model number ‎FBA_wraith2.0cherry</li>
+            <li>Hardware Platform ‎MP3 Player, Tablet, Smartphone</li>
+            <li>Special Features ‎noise cancelling</li>
+            <li>Colour Screen ‎No</li>
+            <li>Microphone format ‎In-Line, Built-In</li>
+            <li>Batteries Included ‎No</li>
+            <li>Batteries Required ‎No</li>
+            <li>Form Factor ‎Over Ear, Over ear</li>
+            <li>Includes Rechargeable Battery ‎No</li>
+            <li>Includes remote ‎No</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
